_sass/_hero.scss
.hero {
  // height: 100%;
  min-height: 840px;
  position: relative;
  background: $red; // fallback
  background: linear-gradient(120deg, $gold 20%, $red 80%);
  color: #eee;

  p {
    display: block;
    max-width: 600px;
    margin: 2rem auto;
    font-style: italic;
  }
  .lead {
    font-size: 2rem;
    strong, a, a:visited { color: #fff; }
    a { text-decoration: underline; }
  }

  div {
    padding: 0 1rem;
    margin-top: 3rem;
  }

  .logo-rb {
    width: 100%;
    max-width: 450px;
  }

  .logo-container {
    max-width: 450px;
    margin: 0 auto;
    padding: 0;

    a {
      display: block;
      float: left;
      width: 33.33333%;
      max-width: 150px;
      margin: 0;
      padding: 0 2px;
    }
    a:first-child {
      position: relative;
      left: -2px;
    }
    a:last-child {
      position: relative;
      right: -2px;
    }
  }

  hr {
    border: none;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  }

  .schniba-flyer {
    max-width: 512px;
    margin-bottom: 3rem;
    transform: rotate(3deg);
  }
}

